--- a/production/inovaki-feature-banners.css
+++ b/production/inovaki-feature-banners.css
@@ -219,7 +219,7 @@
   min-height: 90px;
 }
 
-.inovaki-catalogo-online {
+.inovaki-centerparts-product {
   display: flex;
   align-items: center;
   justify-content: center;
