--- a/production/inovaki-feature-banners.css
+++ b/production/inovaki-feature-banners.css
@@ -232,3 +232,21 @@
   font-weight: 600;
   color: #37326d;
 }
+
+#btnVendedorHome {
+  background-color: #37326d;
+  border-radius: 25px;
+  border: 0;
+  position: relative;
+  display: inline-block;
+  line-height: 30px;
+  text-align: center;
+  font-size: 16px;
+  outline: none;
+  padding: 0 15px;
+  margin-right: 5px;
+  color: #fff !important;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all .2s ease-out;
+}
